# wire

./: .ruff.toml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
wire/: __main__.py  cache_dict.py  ep_auth.py  http_pool.py  router.py  wire_config.py
wire_test/: ep_auth_test.py
